Fixed: Data table content alignment issue

--- a/assets/front-end/css/data-table/index.css
+++ b/assets/front-end/css/data-table/index.css
@@ -1,11 +1,16 @@
-table.eael-data-table thead .sorting, table.eael-data-table thead .sorting_desc, table.eael-data-table thead .sorting_asc {
+@charset "UTF-8";
+table.eael-data-table thead .sorting_asc,
+table.eael-data-table thead .sorting_desc,
+table.eael-data-table thead .sorting {
   position: relative;
   z-index: 0;
   outline: 0;
   cursor: pointer;
 }
 
-table.eael-data-table thead .sorting:after, table.eael-data-table thead .sorting_desc:after, table.eael-data-table thead .sorting_asc:after {
+table.eael-data-table thead .sorting_asc:after,
+table.eael-data-table thead .sorting_desc:after,
+table.eael-data-table thead .sorting:after {
   position: absolute;
   top: 50%;
   right: 10px;
@@ -21,25 +26,30 @@ table.eael-data-table thead .sorting:after, table.eael-data-table thead .sorting
   justify-content: flex-start;
   width: 100%;
 }
+
 .eael-data-table-wrap .eael-data-tables_filter {
   flex-grow: 1;
   flex-basis: 50%;
   text-align: right;
 }
+
 .eael-data-table-wrap .eael-data-tables_filter label {
   font-weight: 700;
 }
-.eael-data-table-wrap .eael-data-tables_filter label input[type="search"] {
+
+.eael-data-table-wrap .eael-data-tables_filter label input[type=search] {
   height: 40px;
   border: 1px solid rgba(0, 0, 0, 0.09);
   outline: 0;
   padding: 10px;
   margin-left: 10px;
 }
+
 .eael-data-table-wrap .eael-data-tables_length {
   flex-grow: 1;
   flex-basis: 50%;
 }
+
 .eael-data-table-wrap .eael-data-tables_length select {
   width: auto;
   max-width: 120px;
@@ -49,38 +59,45 @@ table.eael-data-table thead .sorting:after, table.eael-data-table thead .sorting
   margin-left: 10px;
   margin-right: 10px;
 }
+
 .eael-data-table-wrap .eael-data-tables_length label {
   font-weight: 700;
 }
+
 .eael-data-table-wrap .eael-data-tables_info {
   flex-grow: 1;
   flex-basis: 50%;
   font-weight: 700;
 }
+
 .eael-data-table-wrap .eael-data-tables_paginate {
   flex-grow: 1;
   flex-basis: 50%;
   text-align: right;
 }
+
 .eael-data-table-wrap .eael-data-tables_paginate .paginate_button {
   padding: 10px 15px;
   background: #f2f2f2;
   margin-right: 2px;
   cursor: pointer;
-  transition: all .3s;
+  transition: all 0.3s;
 }
+
 .eael-data-table-wrap .eael-data-tables_paginate .paginate_button:hover {
   color: #fff;
   background: #4a4893;
 }
+
 .eael-data-table-wrap .eael-data-tables_paginate .paginate_button.current {
   color: #fff;
   background: #4a4893;
 }
+
 .eael-data-table-wrap .eael-data-tables_paginate .paginate_button.disabled {
   cursor: no-drop;
   background: #f2f2f2;
-  opacity: .5;
+  opacity: 0.5;
   color: #888;
 }
 
@@ -97,12 +114,15 @@ table.eael-data-table thead .sorting:after, table.eael-data-table thead .sorting
   border-collapse: collapse;
   border: none;
 }
+
 .eael-data-table tr {
   border-style: none;
 }
+
 .eael-data-table thead tr {
   text-align: left;
 }
+
 .eael-data-table thead tr th {
   padding: 20px 15px;
   background: #4a4893;
@@ -116,28 +136,36 @@ table.eael-data-table thead .sorting:after, table.eael-data-table thead .sorting
   border-style: none;
   background-clip: padding-box;
 }
+
 .eael-data-table thead tr th:hover {
   border-color: #000;
 }
+
 .eael-data-table tbody tr.even {
   transition: background 0.4s ease-in-out;
 }
+
 .eael-data-table tbody tr.even:hover {
   background: rgba(242, 242, 242, 0.7);
 }
+
 .eael-data-table tbody tr.even:last-child {
   border-bottom: 1px solid rgba(0, 0, 0, 0.09);
 }
+
 .eael-data-table tbody tr.odd {
   background: rgba(242, 242, 242, 0.5);
   transition: background 0.2s ease-in-out;
 }
+
 .eael-data-table tbody tr.odd:hover {
   background: rgba(242, 242, 242, 0.7);
 }
+
 .eael-data-table tbody tr.odd:last-child {
   border-bottom: 1px solid rgba(0, 0, 0, 0.09);
 }
+
 .eael-data-table tbody tr td {
   padding: 20px 15px;
   font-size: 14px;
@@ -166,17 +194,19 @@ table.eael-data-table thead .sorting:after, table.eael-data-table thead .sorting
 
   .th-mobile-screen {
     display: inline-block;
-    padding: 0 .6em;
+    padding: 0 0.6em;
     margin-right: 10px;
     text-align: center;
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: 100px;
   }
+
   .th-mobile-screen .eael-data-table-th-img {
     margin: 0 auto 15px auto;
     display: block;
   }
+
   .th-mobile-screen .data-header-icon {
     margin: 0 auto 15px auto;
     display: block;
@@ -191,6 +221,7 @@ table.eael-data-table thead .sorting:after, table.eael-data-table thead .sorting
     width: 100%;
     justify-content: center;
   }
+
   .td-content > p {
     width: 100%;
     justify-content: center;
@@ -199,6 +230,7 @@ table.eael-data-table thead .sorting:after, table.eael-data-table thead .sorting
   .custom-responsive-option-enable .eael-data-table thead {
     display: none;
   }
+
   .custom-responsive-option-enable .eael-data-table tbody tr td {
     float: none;
     clear: left;
@@ -214,23 +246,29 @@ table.eael-data-table thead .sorting:after, table.eael-data-table thead .sorting
   }
 }
 table.eael-data-table thead .sorting:after {
-  content: "\f0dc";
+  content: "";
 }
+
 table.eael-data-table thead .headerSortDown:after {
-  content: "\f0dd";
+  content: "";
 }
+
 table.eael-data-table thead .headerSortUp:after {
-  content: "\f0de";
+  content: "";
 }
+
 table.eael-data-table thead .sorting_disabled.sorting:after {
   display: none;
 }
+
 table.eael-data-table .sorting.sorting-none:after {
   display: none;
 }
+
 table.eael-data-table .sorting_desc.sorting-none:after {
   display: none;
 }
+
 table.eael-data-table .sorting_asc.sorting-none:after {
   display: none;
 }
@@ -255,16 +293,7 @@ table.eael-data-table .sorting_asc.sorting-none:after {
   text-align: left;
 }
 
-.eael-dt-td-align-left .eael-data-table tbody tr td {
-  text-align: left;
-}
-
 .eael-dt-th-align-right .eael-data-table thead tr th {
-  text-align: right;
-  padding-right: 30px;
-}
-
-.eael-dt-td-align-right .eael-data-table tbody tr td {
   text-align: right;
   padding-right: 30px;
 }
@@ -273,6 +302,42 @@ table.eael-data-table .sorting_asc.sorting-none:after {
   text-align: center;
 }
 
+.eael-dt-td-align-left .eael-data-table tbody tr td {
+  text-align: left;
+}
+
 .eael-dt-td-align-center .eael-data-table tbody tr td {
   text-align: center;
+}
+
+.eael-dt-td-align-right .eael-data-table tbody tr td {
+  text-align: right;
+  padding-right: 30px;
+}
+
+@media (max-width: 1024px) {
+  .eael-dt-td-align-tablet-left .eael-data-table tbody tr td {
+    text-align: left;
+  }
+
+  .eael-dt-td-align-tablet-center .eael-data-table tbody tr td {
+    text-align: center;
+  }
+
+  .eael-dt-td-align-tablet-right .eael-data-table tbody tr td {
+    text-align: right;
+  }
+}
+@media (max-width: 767px) {
+  .eael-dt-td-align-mobile-left .eael-data-table tbody tr td {
+    text-align: left;
+  }
+
+  .eael-dt-td-align-mobile-center .eael-data-table tbody tr td {
+    text-align: center;
+  }
+
+  .eael-dt-td-align-mobile-right .eael-data-table tbody tr td {
+    text-align: right;
+  }
 }
